# minesweeperbot

./: .gitignore  CMakeLists.txt  README.md  build.sh  sweepersolverold
old/: README.md  backup.sh  build.sh
old/src/: board.cpp  debug.h  game.h  logmath.cpp  main.cpp  solver.cpp  solver.h
src/: board.cpp  board.h  debug.cpp  debug.h  game.cpp  game.h  logmath.cpp  logmath.h  main.cpp  math.cpp  math.h  random.cpp  random.h  solver.cpp  solver.h
